<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/_8"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/black_round_button"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/_8"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/_5"
        app:layout_constraintEnd_toStartOf="@+id/_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_7"
        app:layout_constraintTop_toBottomOf="@+id/plusorminus" />

    <Button
        android:id="@+id/percentage"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/grey_round_button"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/percentage"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/_9"
        app:layout_constraintEnd_toStartOf="@+id/divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plusorminus"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/plusorminus"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/grey_round_button"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/plus_minus"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/_8"
        app:layout_constraintEnd_toStartOf="@+id/percentage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ac"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/_5"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/black_round_button"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/_5"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/_2"
        app:layout_constraintEnd_toStartOf="@+id/_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_4"
        app:layout_constraintTop_toBottomOf="@+id/_8" />

    <Button
        android:id="@+id/_2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/black_round_button"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/_2"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/_0"
        app:layout_constraintEnd_toStartOf="@+id/_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_1"
        app:layout_constraintTop_toBottomOf="@+id/_5" />

    <Button
        android:id="@+id/_3"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/black_round_button"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/_3"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/decimal"
        app:layout_constraintEnd_toStartOf="@+id/add"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_2"
        app:layout_constraintTop_toBottomOf="@+id/_6" />

    <Button
        android:id="@+id/_6"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/black_round_button"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/_6"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/_3"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_5"
        app:layout_constraintTop_toBottomOf="@+id/_9" />

    <Button
        android:id="@+id/divide"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/orange_round_button"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/divide"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/multiple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/percentage"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/multiple"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/orange_round_button"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/multiply"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_9"
        app:layout_constraintTop_toBottomOf="@+id/divide" />

    <Button
        android:id="@+id/minus"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/orange_round_button"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/subtract"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_6"
        app:layout_constraintTop_toBottomOf="@+id/multiple" />

    <Button
        android:id="@+id/add"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/orange_round_button"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_3"
        app:layout_constraintTop_toBottomOf="@+id/minus" />

    <Button
        android:id="@+id/equal"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/orange_round_button"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/equal"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/decimal"
        app:layout_constraintTop_toBottomOf="@+id/add" />

    <Button
        android:id="@+id/decimal"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/black_round_button"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/decimal"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_0"
        app:layout_constraintTop_toBottomOf="@+id/_3" />

    <Button
        android:id="@+id/_0"
        android:layout_width="170dp"
        android:layout_height="75dp"
        android:background="@drawable/round_corner_button"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/decimal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_1" />

    <Button
        android:id="@+id/_1"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/black_round_button"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/_1"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/_0"
        app:layout_constraintEnd_toStartOf="@+id/_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_4" />

    <Button
        android:id="@+id/_4"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/black_round_button"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/_4"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/_1"
        app:layout_constraintEnd_toStartOf="@+id/_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_7" />

    <Button
        android:id="@+id/_7"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/black_round_button"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/_7"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/_4"
        app:layout_constraintEnd_toStartOf="@+id/_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ac" />

    <Button
        android:id="@+id/ac"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/grey_round_button"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/ac"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/_7"
        app:layout_constraintEnd_toStartOf="@+id/plusorminus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/_9"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/black_round_button"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/_9"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/_6"
        app:layout_constraintEnd_toStartOf="@+id/multiple"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_8"
        app:layout_constraintTop_toBottomOf="@+id/percentage" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/border_edittext"
        android:gravity="end|center_vertical"
        android:minLines="1"
        android:singleLine="true"
        android:text="@string/_0"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />
</androidx.constraintlayout.widget.ConstraintLayout>